--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
         </div>
         <div class="navbar-end gap-2 sm:gap-5 font-mono">
             <a href="#about" class="badge badge-primary badge-xs sm:badge-lg hidden sm:block"> About me</a>
-            <a href="" class="badge badge-primary badge-xs sm:badge-lg hidden sm:block">Blog</a>
-            <a href="" class="badge badge-primary badge-xs sm:badge-lg hidden sm:block">Shop</a>
+            <a href="https://nuge.gumroad.com/" target="_blank" class="badge badge-primary badge-xs sm:badge-lg hidden sm:block">Shop</a>
             <details class="dropdown block sm:hidden">
                 <summary class="btn m-1 btn-primary rounded-full text-center">
                     <svg class="w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -39,7 +38,7 @@
         <div tabindex="0" role="button" class="rounded-2xl btn m-1 btn-primary shadow-lg">
             Filter
         </div>
-        <ul id="filter" tabindex="0" class="items-center text-black dropdown-content menu bg-primary rounded-box z-1 w-52 p-2 shadow-sm">
+        <ul id="filter" tabindex="0" class="items-center text-black dropdown-content menu bg-primary rounded-box z-1  p-2 shadow-sm">
             <li><a href="#" data-tag="all" class="text-sm font-medium hover:text-secondary">All</a></li>
             <li><a href="#" data-tag="poster" class="text-sm font-medium hover:text-secondary">Poster</a></li>
             <li><a href="#" data-tag="branding" class="text-sm font-medium hover:text-secondary">Branding</a></li>
