--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     <div id="about" class="flex mx-auto p-10 px-auto xl:px-75 w-full lg:mb-15">
         <main class="">
-            <a href="src/CV - Anugerah_05.pdf" class=" badge border-2 border-neutral border-dashed badge-primary font-bold -rotate-5">Download Resume</a>
+            <a href="src/CV - Anugerah_05.pdf" class="animate-heartbeat animate-iteration-count-infinite animate-duration-[2000ms] badge border-2 border-neutral border-dashed badge-primary font-bold -rotate-5">Download Resume</a>
             <div class="flex">
                 <h1 class="font-black mb-3 text-3xl lg:text-4xl underline-offset-7 underline decoration-wavy">
                     About Me
