--- a/index.html
+++ b/index.html
@@ -23,12 +23,9 @@
                         <path fill="none" stroke="#261B25" stroke-linecap="round" stroke-linejoin="round" d="M3 6.001h18m-18 6h18m-18 6h18" stroke-width="1" />
                     </svg>
                 </summary>
-                <ul class="gap-2 content-center items-center menu dropdown-content bg-base-100 rounded-box w-full z-1  p-2 shadow-sm">
-                    <li><a href="" class="badge badge-primary badge-lg">Design</a></li>
-                    <li><a href="" class="badge badge-primary badge-lg">Videos</a></li>
-                    <li><a href="" class="badge badge-primary badge-lg">Music</a></li>
-                    <li><a href="" class="badge badge-primary badge-lg">Shop</a></li>
-                    <li><a href="" class="badge badge-primary badge-lg">Blog</a></li>
+                <ul class="gap-2 content-center dropdown-center items-center menu dropdown-content bg-primary rounded-box w-full z-1  p-2 shadow-sm">
+                    <li><a href="#about" class=" text-neutral"> About</a></li>
+                    <li><a href="https://nuge.gumroad.com/" target="_blank" class="badge badge-primary">Shop</a></li>
                 </ul>
             </details>
         </div>
