--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
     <nav class="navbar p-7 sm:p-10 mx-auto border-b-1">
         <div class="justify-items-center navbar-start gap-2">
+            <svg class="w-8" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                <path fill="#DB924C" fill-rule="evenodd" d="M12.75 5a.75.75 0 0 0-1.5 0v5.701l-4.937-2.85a.75.75 0 1 0-.75 1.299L10.5 12l-4.937 2.85a.75.75 0 1 0 .75 1.3l4.937-2.851V19a.75.75 0 0 0 1.5 0v-5.701l4.937 2.85a.75.75 0 0 0 .75-1.299L13.5 12l4.937-2.85a.75.75 0 0 0-.75-1.3l-4.937 2.851z" clip-rule="evenodd" />
+            </svg>
             <h1 class="italic text-2xl font-mono font-black">
                 Anugerah
             </h1>
