--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/ico" href="favicon.ico">
     <title>Anugerah Portfolio</title>
     <link href="src/output.css" rel="stylesheet">
     <script src="https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs" type="module"></script>
@@ -34,7 +35,7 @@
         </div>
     </nav>
 
-     <div class="block lg:hidden rounded-full dropdown dropdown-top dropdown-center items-center  z-100 fixed bottom-4   px-4 py-2  gap-6">
+     <div class="block lg:hidden rounded-full dropdown dropdown-top dropdown-center items-center  z-100 fixed bottom-4   px-4 py-5  gap-6">
         <div tabindex="0" role="button" class="rounded-2xl btn m-1 btn-primary shadow-lg">
             Filter
         </div>
@@ -149,39 +150,42 @@
             </div>
         </main>
     </div>
-
-    <footer class="flex justify-end p-10 border-t-1">
+    <footer class="flex justify-between p-5 border-t-1">
+        <div class="start-1 text-xs">
+            © 2025 by Anugerah 
+        </div>
         <ul class="flex gap-2">
             <li>
                 <a href="https://dribbble.com/Nugehood">
-                <svg class="w-7" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                <svg class="md:w-7 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                     <path fill="#DB924C" fill-rule="evenodd" d="M5 1a4 4 0 0 0-4 4v14a4 4 0 0 0 4 4h14a4 4 0 0 0 4-4V5a4 4 0 0 0-4-4zm14.421 12.097a7.5 7.5 0 0 1-3.45 5.268c-.415-1.976-.946-3.827-1.627-5.593c1.397-.182 3.04-.078 5.077.325m-12.15 4.724c1.99-2.717 3.739-4.27 6.074-4.86c.725 1.85 1.28 3.795 1.705 5.893A7.5 7.5 0 0 1 12 19.5a7.47 7.47 0 0 1-4.73-1.68Zm12.23-5.727c-2.166-.42-3.967-.523-5.543-.276q-.315-.742-.668-1.466c1.826-.682 3.248-1.678 4.499-3.122a7.47 7.47 0 0 1 1.711 4.864Zm-6.54-.066a29 29 0 0 0-.628-1.357c-2.053.606-4.578.894-7.827 1.044a7.47 7.47 0 0 0 2.028 5.42c1.983-2.689 3.863-4.416 6.426-5.107Zm4.138-5.53c-1.183 1.39-2.513 2.32-4.265 2.956a32 32 0 0 0-3.01-4.633a7.5 7.5 0 0 1 2.177-.321c1.968 0 3.76.758 5.098 1.999Zm-5.233 3.267a31 31 0 0 0-3.02-4.571a7.51 7.51 0 0 0-4.234 5.515c3.054-.147 5.383-.418 7.254-.944" clip-rule="evenodd" />
                 </svg>
                 </a>
             </li>
             <li>
                 <a href="https://www.instagram.com/brief.look/">
-                    <svg class="w-7" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14 14">
+                    <svg class="md:w-7 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14 14">
                         <path fill="#DB924C" fill-rule="evenodd" d="M3.39.787A2.604 2.604 0 0 0 .786 3.39v6.944a2.604 2.604 0 0 0 2.604 2.604h6.944a2.604 2.604 0 0 0 2.603-2.604V3.39A2.604 2.604 0 0 0 10.334.787zm7.693 2.607a.75.75 0 1 1-1.5 0a.75.75 0 0 1 1.5 0m-4.22 1.388a2.08 2.08 0 1 0 0 4.16a2.08 2.08 0 0 0 0-4.16m-3.081 2.08a3.08 3.08 0 1 1 6.16 0a3.08 3.08 0 0 1-6.16 0" clip-rule="evenodd" />
                     </svg>
                 </a>
             </li>
             <li>
                 <a href="https://www.linkedin.com/in/anugerah-maulana/">
-                    <svg class="w-7" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                    <svg class="md:w-7 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                         <path fill="#DB924C" fill-rule="evenodd" d="M5 1a4 4 0 0 0-4 4v14a4 4 0 0 0 4 4h14a4 4 0 0 0 4-4V5a4 4 0 0 0-4-4zm1.205 6.91a1.705 1.705 0 1 0 0-3.41a1.705 1.705 0 0 0 0 3.41M7.909 19.5V9.273H4.5V19.5h3.41Zm4.432-10.227H9.273V19.5h3.068v-6.17c.395-.642 1.077-1.33 2.045-1.33c1.364 0 1.705 1.364 1.705 2.046V19.5H19.5v-5.454c0-1.828-.797-4.773-3.75-4.773c-1.878 0-2.92.685-3.41 1.327z" clip-rule="evenodd" />
                     </svg>
                 </a>
             </li>
             <li>
                 <a href="mailto:nugehood@proton.me">
-                    <svg class="w-7" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14 14">
+                    <svg class="md:w-7 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14 14">
                         <path fill="#DB924C" fill-rule="evenodd" d="M0 2.75a1.5 1.5 0 0 1 1.5-1.5h11a1.5 1.5 0 0 1 1.5 1.5v.342L7.383 7.504A.7.7 0 0 1 7 7.607a.7.7 0 0 1-.383-.103L0 3.092zm0 1.844v6.656a1.5 1.5 0 0 0 1.5 1.5h11a1.5 1.5 0 0 0 1.5-1.5V4.594L8.073 8.546l-.005.004A1.97 1.97 0 0 1 7 8.857c-.375 0-.753-.102-1.068-.307l-.005-.004z" clip-rule="evenodd" />
                     </svg>
                 </a>
             </li>
         </ul>
     </footer>
+
 
     
   <script>
