--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             </h1>
         </div>
         <div class="navbar-end gap-2 sm:gap-5 font-mono">
-            <a href="#about" class="badge badge-primary badge-xs sm:badge-lg min-w-fit hidden sm:block"> About me</a>
-            <a href="https://nuge.gumroad.com/" target="_blank" class="min-w-fit badge badge-primary badge-xs sm:badge-lg hidden sm:block">Shop</a>
+            <a href="#about" class="hover:badge-ghost badge badge-primary badge-xs sm:badge-lg min-w-fit hidden sm:block"> About me</a>
+            <a href="https://nuge.gumroad.com/" target="_blank" class="hover:badge-ghost min-w-fit badge badge-primary badge-xs sm:badge-lg hidden sm:block">Shop</a>
             <a class="min-w-fit badge-dash badge hover:text-amber-50 hidden sm:block" target="_blank" href="https://ko-fi.com/J3J61JMZL2">Buy me a coffee?</a>
             
             <details class="dropdown dropdown-center block sm:hidden">
@@ -40,7 +40,7 @@
     </nav>
 
      <div class="block lg:hidden rounded-full dropdown dropdown-top dropdown-center items-center  z-100 fixed bottom-4   px-4 py-5  gap-6">
-        <div tabindex="0" role="button" class="rounded-2xl btn m-1 btn-primary shadow-lg">
+        <div tabindex="0" role="button" class="hover:badge-ghost rounded-2xl btn m-1 btn-primary shadow-lg">
             Filter
         </div>
         <ul id="filter" tabindex="0" class="items-center text-black dropdown-content menu bg-primary rounded-box z-1  p-2 shadow-sm">
@@ -54,7 +54,7 @@
     </div>
     
     <nav id="filter" class="lg:flex gap-6 hidden items-center text-black z-100 fixed bottom-4 left-1/2 -translate-x-1/2 bg-primary shadow-lg  rounded-full px-4 py-2 ">
-        <div class="font-bold badge">
+        <div class="font-bold badge ">
             Filter
         </div>
         <a href="#" data-tag="all" class="text-sm font-medium hover:text-secondary">All</a>
@@ -72,7 +72,7 @@
 
     <div id="about" class="flex mx-auto p-10 px-auto xl:px-75 w-full lg:mb-15">
         <main class="">
-            <a href="src/CV - Anugerah_05.pdf" class="animate-heartbeat animate-iteration-count-infinite animate-duration-[2000ms] badge border-2 border-neutral border-dashed badge-primary font-bold -rotate-5">Download Resume</a>
+            <a href="src/CV - Anugerah_05.pdf" class="hover:badge-ghost animate-heartbeat animate-iteration-count-infinite animate-duration-[2000ms] badge border-2 border-neutral border-dashed badge-primary font-bold -rotate-5">Download Resume</a>
             <div class="flex">
                 <h1 class="font-black mb-3 text-3xl lg:text-4xl underline-offset-7 underline decoration-wavy">
                     About Me
