--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
----
-navbar-title: Nugraha
----
 <!DOCTYPE html>
 <html lang="en" data-theme="coffee">
 <head>
@@ -10,37 +7,10 @@ navbar-title: Nugraha
     <title>Anugerah Portfolio</title>
     <link href="src/output.css" rel="stylesheet">
     <script src="https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs" type="module"></script>
+    <script src="https://cdn.jsdelivr.net/npm/htmx.org@2.0.7/dist/htmx.min.js" integrity="sha384-ZBXiYtYQ6hJ2Y0ZNoYuI+Nq5MqWBr+chMrS/RkXpNzQCApHEhOt2aY8EJgqwHLkJ" crossorigin="anonymous"></script>
 </head>
 <body>
-    <nav class="navbar p-7 sm:p-10 mx-auto border-b-1">
-        <div class="justify-items-center navbar-start gap-2">
-            
-            <svg class="w-8 animate-rotate-360 animate-duration-[3s] animate-iteration-count-infinite" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                <path fill="#DB924C" fill-rule="evenodd" d="M12.75 5a.75.75 0 0 0-1.5 0v5.701l-4.937-2.85a.75.75 0 1 0-.75 1.299L10.5 12l-4.937 2.85a.75.75 0 1 0 .75 1.3l4.937-2.851V19a.75.75 0 0 0 1.5 0v-5.701l4.937 2.85a.75.75 0 0 0 .75-1.299L13.5 12l4.937-2.85a.75.75 0 0 0-.75-1.3l-4.937 2.851z" clip-rule="evenodd" />
-            </svg>
-            <h1 class="italic text-2xl font-mono font-black">
-                Anugerah
-            </h1>
-        </div>
-        <div class="navbar-end gap-2 sm:gap-5 font-mono">
-            <a href="#about" class="hover:badge-ghost badge badge-primary badge-xs sm:badge-lg min-w-fit hidden sm:block"> About me</a>
-            <a href="https://nuge.gumroad.com/" target="_blank" class="hover:badge-ghost min-w-fit badge badge-primary badge-xs sm:badge-lg hidden sm:block">Shop</a>
-            <a class="min-w-fit badge-dash badge hover:text-amber-50 hidden sm:block" target="_blank" href="https://ko-fi.com/J3J61JMZL2">Buy me a coffee?</a>
-            
-            <details class="dropdown dropdown-center block sm:hidden">
-                <summary class="btn m-1 btn-primary rounded-full text-center">
-                    <svg class="w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                        <path fill="none" stroke="#261B25" stroke-linecap="round" stroke-linejoin="round" d="M3 6.001h18m-18 6h18m-18 6h18" stroke-width="1" />
-                    </svg>
-                </summary>
-                <ul class="min-w-full items-center mx-auto gap-2 menu dropdown-content  rounded-box  z-1  p-2">
-                    <li><a href="#about" class="badge badge-primary text-neutral"> About</a></li>
-                    <li><a href="https://nuge.gumroad.com/" target="_blank" class="badge badge-primary">Shop</a></li>
-                    <li><a class="btn  btn-primary text-center rounded-full" target="_blank" href="https://ko-fi.com/J3J61JMZL2">Buy me coffee?</a></li>
-                </ul>
-            </details>
-        </div>
-    </nav>
+        <nav class="navbar p-7 sm:p-10 mx-auto border-b-1" hx-get="navbar.html" hx-trigger="load" hx-target="this"></nav>
 
      <div class="block lg:hidden rounded-full dropdown dropdown-top dropdown-center items-center  z-100 fixed bottom-4   px-4 py-5  gap-6">
         <div tabindex="0" role="button" class="hover:badge-ghost rounded-2xl btn m-1 btn-primary shadow-lg">
