--- a/navbar.html
+++ b/navbar.html
@@ -1,33 +1,27 @@
-<nav class="navbar bg-base-100">
-  <!-- Left side (logo + title) -->
-  <div class="navbar-start gap-2">
-    <svg class="w-8 animate-rotate-360 animate-duration-[3s] animate-iteration-count-infinite" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-      <path fill="#DB924C" fill-rule="evenodd" d="M12.75 5a.75.75 0 0 0-1.5 0v5.701l-4.937-2.85a.75.75 0 1 0-.75 1.299L10.5 12l-4.937 2.85a.75.75 0 1 0 .75 1.3l4.937-2.851V19a.75.75 0 0 0 1.5 0v-5.701l4.937 2.85a.75.75 0 0 0 .75-1.299L13.5 12l4.937-2.85a.75.75 0 0 0-.75-1.3l-4.937 2.851z" clip-rule="evenodd" />
-    </svg>
-    <h1 class="italic text-2xl font-mono font-black">Anugerah</h1>
-  </div>
-
-  <!-- Right side (desktop links) -->
-  <div class="navbar-end gap-2 sm:gap-5 font-mono hidden sm:flex">
-    <a href="#about" class="hover:badge-ghost badge badge-primary badge-xs sm:badge-lg min-w-fit">About me</a>
-    <a href="https://nuge.gumroad.com/" target="_blank" class="hover:badge-ghost min-w-fit badge badge-primary badge-xs sm:badge-lg">Shop</a>
-    <a class="min-w-fit badge-dash badge hover:text-amber-50" target="_blank" href="https://ko-fi.com/J3J61JMZL2">Buy me a coffee?</a>
-  </div>
-
-  <!-- Right side (mobile dropdown) -->
-  <div class="navbar-end sm:hidden">
-    <div class="dropdown dropdown-end">
-      <div tabindex="0" role="button" class="btn btn-primary rounded-full">
-        <!-- Hamburger icon -->
-        <svg class="w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-          <path fill="none" stroke="#261B25" stroke-linecap="round" stroke-linejoin="round" d="M3 6.001h18m-18 6h18m-18 6h18" stroke-width="1" />
-        </svg>
-      </div>
-      <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
-        <li><a href="#about" class="badge badge-primary text-neutral">About</a></li>
-        <li><a href="https://nuge.gumroad.com/" target="_blank" class="badge badge-primary">Shop</a></li>
-        <li><a class="btn btn-primary rounded-full text-center" target="_blank" href="https://ko-fi.com/J3J61JMZL2">Buy me coffee?</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
+        <div class="justify-items-center navbar-start gap-2">
+            
+            <svg class="w-8 animate-rotate-360 animate-duration-[3s] animate-iteration-count-infinite" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                <path fill="#DB924C" fill-rule="evenodd" d="M12.75 5a.75.75 0 0 0-1.5 0v5.701l-4.937-2.85a.75.75 0 1 0-.75 1.299L10.5 12l-4.937 2.85a.75.75 0 1 0 .75 1.3l4.937-2.851V19a.75.75 0 0 0 1.5 0v-5.701l4.937 2.85a.75.75 0 0 0 .75-1.299L13.5 12l4.937-2.85a.75.75 0 0 0-.75-1.3l-4.937 2.851z" clip-rule="evenodd" />
+            </svg>
+            <h1 class="italic text-2xl font-mono font-black">
+                Anugerah
+            </h1>
+        </div>
+        <div class="navbar-end gap-2 sm:gap-5 font-mono">
+            <a href="#about" class="hover:badge-ghost badge badge-primary badge-xs sm:badge-lg min-w-fit hidden sm:block"> About me</a>
+            <a href="https://nuge.gumroad.com/" target="_blank" class="hover:badge-ghost min-w-fit badge badge-primary badge-xs sm:badge-lg hidden sm:block">Shop</a>
+            <a class="min-w-fit badge-dash badge hover:text-amber-50 hidden sm:block" target="_blank" href="https://ko-fi.com/J3J61JMZL2">Buy me a coffee?</a>
+            
+            <details class="dropdown dropdown-center block sm:hidden">
+                <summary class="btn m-1 btn-primary rounded-full text-center">
+                    <svg class="w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                        <path fill="none" stroke="#261B25" stroke-linecap="round" stroke-linejoin="round" d="M3 6.001h18m-18 6h18m-18 6h18" stroke-width="1" />
+                    </svg>
+                </summary>
+                <ul class="min-w-full items-center mx-auto gap-2 menu dropdown-content  rounded-box  z-1  p-2">
+                    <li><a href="#about" class="badge badge-primary text-neutral"> About</a></li>
+                    <li><a href="https://nuge.gumroad.com/" target="_blank" class="badge badge-primary">Shop</a></li>
+                    <li><a class="btn  btn-primary text-center rounded-full" target="_blank" href="https://ko-fi.com/J3J61JMZL2">Buy me coffee?</a></li>
+                </ul>
+            </details>
+        </div>
