--- a/filter_mobile.html
+++ b/filter_mobile.html
@@ -10,3 +10,33 @@
             <li><a href="#" data-tag="3d" class=" text-sm font-medium hover:text-secondary-content">3D</a></li>
             <li><a href="#" data-tag="product" class="text-sm font-medium hover:text-secondary-content">Product</a></li>
         </ul>
+
+        <script>
+             // Filter
+  function filterByTag(tag) {
+    if (tag === "all") {
+      renderProjects(allProjects);
+    } else {
+      renderProjects(allProjects.filter(p => p.tags.includes(tag)));
+    }
+  }
+
+  // Event listeners
+  filterLinks.forEach(link => {
+    link.addEventListener("click", e => {
+      e.preventDefault();
+
+      // Remove active class from all
+      filterLinks.forEach(l => l.classList.remove("badge"));
+      filterLinks.forEach(l => l.classList.add("text-black"));
+
+      // Add active class to clicked one
+      link.classList.remove("text-black");
+      link.classList.add("badge");
+
+      // Filter projects
+      const tag = link.getAttribute("data-tag");
+      filterByTag(tag);
+    });
+  });
+        </script>
