--- a/navbar.html
+++ b/navbar.html
@@ -3,9 +3,9 @@
             <svg class="w-8 animate-rotate-360 animate-duration-[3s] animate-iteration-count-infinite" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                 <path fill="#DB924C" fill-rule="evenodd" d="M12.75 5a.75.75 0 0 0-1.5 0v5.701l-4.937-2.85a.75.75 0 1 0-.75 1.299L10.5 12l-4.937 2.85a.75.75 0 1 0 .75 1.3l4.937-2.851V19a.75.75 0 0 0 1.5 0v-5.701l4.937 2.85a.75.75 0 0 0 .75-1.299L13.5 12l4.937-2.85a.75.75 0 0 0-.75-1.3l-4.937 2.851z" clip-rule="evenodd" />
             </svg>
-            <h1 class="italic text-2xl font-mono font-black">
+            <a href="/index.html" class="italic text-2xl font-mono font-black">
                 Anugerah
-            </h1>
+            </a>
         </div>
         <div class="navbar-end gap-2 sm:gap-5 font-mono">
             <a href="#about" class="hover:badge-ghost badge badge-primary badge-xs sm:badge-lg min-w-fit hidden sm:block"> About me</a>
