center filter-mobile

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
     <nav class="navbar p-7 sm:p-10 mx-auto border-b-1" hx-get="navbar.html" hx-trigger="load" hx-target="this"></nav>
 
-     <div class="block lg:hidden rounded-full dropdown dropdown-top dropdown-center items-center  z-100 fixed bottom-4   px-4 py-5  gap-6">
+     <div class="block lg:hidden rounded-full dropdown justify-self-center dropdown-top dropdown-center items-center  z-100 fixed bottom-4   px-4 py-5  gap-6">
         <div tabindex="0" role="button" class="hover:badge-ghost rounded-2xl btn m-1 btn-primary shadow-lg">
-            Filter
+                Filter
         </div>
         <ul id="filter" tabindex="0" class="items-center text-black dropdown-content menu bg-primary rounded-box z-1  p-2 shadow-sm">
             <li><a href="#" data-tag="all" class=" text-sm font-medium hover:text-secondary-content">All</a></li>
