--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
 
     <div id="about" class="flex mx-auto p-10 px-auto xl:px-75 w-full lg:mb-15">
         <main class="">
-            <a href="src/CV - Anugerah_05.pdf" class="hover:badge-ghost animate-heartbeat animate-iteration-count-infinite animate-duration-[2000ms] badge border-2 border-neutral border-dashed badge-primary font-bold -rotate-5">Download Resume</a>
+            <a href="src/CV - Anugerah_06.pdf" class="hover:badge-ghost animate-heartbeat animate-iteration-count-infinite animate-duration-[2000ms] badge border-2 border-neutral border-dashed badge-primary font-bold -rotate-5">Download Resume</a>
             <div class="flex">
                 <h1 class="font-black mb-3 text-3xl lg:text-4xl underline-offset-7 underline decoration-wavy">
                     About Me
                 </h1>
             </div>
             <p class="text-justify text-sm sm:text-lg font-mono">
-                Passionate graphic designer and video editor with 7+ years of experience creating visually compelling content that resonates with audiences. From designing Instagram posters that attract hundreds of engagements to producing videos with over 8,000 views, I thrive on turning creative ideas into impactful visuals.
+                A passionate graphic designer and creative with 8 years of experience creating visually compelling and diverese projects that resonate with target audiences. Focuses on communication and high quality output as tools for engagements.
             </p>
             <ul class=" flex flex-wrap text-xl gap-3 lg:gap-5 font-mono font-black mt-5">
                 <li class="badge badge-xs lg:badge-sm badge-primary">Graphic Designer</li>
